--- a/ss6_css_cascading_style_stylesheet/bai_tap/tao_trang_doc_truyen_ngan/tao_trang_doc_truyen_ngan.html
+++ b/ss6_css_cascading_style_stylesheet/bai_tap/tao_trang_doc_truyen_ngan/tao_trang_doc_truyen_ngan.html
@@ -5,8 +5,10 @@
     <title>Đọc Truyện</title>
     <link rel="stylesheet" href="./asset/tao_trang_doc_truyen_ngan.css">
     <link rel="stylesheet" href="asset/icon1/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="../../../bootstrap-5.0.2-dist/css/bootstrap.min.css">
 </head>
 <body>
+
 <div id="main">
     <div id="tieu_de">
         <ul id="lua_chon">
@@ -30,6 +32,27 @@
     </div>
 
     <div id="slider">
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./asset/anh/bia3.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./asset/anh/bia2.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="./asset/anh/anh_bia.png" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
         <div class="text-content">
             <h2 class="text-heeding">Anime</h2>
             <div class="text-description">Thế giới ảo tưởng , chúc bạn vui vẻ ^^</div>
@@ -98,5 +121,9 @@
         </div>
     </div>
 </div>
+
+<script src="../../../bootstrap-5.0.2-dist/js/bootstrap.min.js">
+
+</script>
 </body>
 </html>
