--- a/ss7_thiet_ke_bo_cuc_web/bai_tap/tao_layuot_voi_rwd/tao_layuot_voi_rwd.html
+++ b/ss7_thiet_ke_bo_cuc_web/bai_tap/tao_layuot_voi_rwd/tao_layuot_voi_rwd.html
@@ -12,7 +12,7 @@
         <li><a href="#">Home </a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Projects</a></li>
-        <li><a href="#">Concact</a></li>
+        <li><a href="#">Contact</a></li>
     </ul>
 </div>
 <div class="content">
