--- a/ss7_layout_website_design/exercise/create_layout _with_rwd/create_layout _with_rwd.html
+++ b/ss7_layout_website_design/exercise/create_layout _with_rwd/create_layout _with_rwd.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tạo layout với RWD</title>
-    <link rel="stylesheet" href="tao_layuot_voi_rwd.css">
+    <link rel="stylesheet" href="create_layout%20_with_rwd.css">
 </head>
 <body>
 <div id="menu">
